[gd_scene load_steps=15 format=3 uid="uid://dy78mfsng0l24"]

[ext_resource type="Script" path="res://Scripts/test_enemy.gd" id="1_mn5l6"]
[ext_resource type="Texture2D" uid="uid://duyvdhdn6yd5l" path="res://icon.svg" id="2_8mn15"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fbocd"]
height = 72.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k6hhj"]
height = 72.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3lqeg"]
size = Vector2(22, 72)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nrqcj"]
size = Vector2(40, 72)

[sub_resource type="CircleShape2D" id="CircleShape2D_3tact"]
radius = 204.01

[sub_resource type="Animation" id="Animation_s2uam"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="Animation_36tgk"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(50, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_m322i"]
resource_name = "attack_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Hitbox:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.4, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-50, 0), Vector2(-10, 0), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p3w34"]
_data = {
"RESET": SubResource("Animation_s2uam"),
"attack": SubResource("Animation_36tgk"),
"attack_left": SubResource("Animation_m322i")
}

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_2s0me"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8mevr"]
size = Vector2(40, 31.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70ng5"]
size = Vector2(1.2e+07, 6.20002e+06)

[node name="TestEnemy" type="CharacterBody2D" groups=["enemy"]]
collision_layer = 4
script = ExtResource("1_mn5l6")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(20, 34)
scale = Vector2(0.3125, 0.5625)
texture = ExtResource("2_8mn15")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(30, 34)
shape = SubResource("CapsuleShape2D_fbocd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(10, 34)
shape = SubResource("CapsuleShape2D_k6hhj")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(20, 34)
shape = SubResource("RectangleShape2D_3lqeg")

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(30, 34)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_nrqcj")

[node name="DetectRadius" type="Area2D" parent="."]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRadius"]
position = Vector2(20, 34)
shape = SubResource("CircleShape2D_3tact")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p3w34")
}

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="Hitbox"]
position = Vector2(20, 32)
scale = Vector2(40, 31)
texture = SubResource("PlaceholderTexture2D_2s0me")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(20, 32.25)
shape = SubResource("RectangleShape2D_8mevr")
disabled = true

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(20, 34)
scale = Vector2(1e-05, 1e-05)
shape = SubResource("RectangleShape2D_70ng5")

[connection signal="area_entered" from="Hurtbox" to="." method="enemy_bonked"]
[connection signal="body_entered" from="DetectRadius" to="." method="_on_detect_radius_body_entered"]
[connection signal="body_exited" from="DetectRadius" to="." method="_on_detect_radius_body_exited"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
